# Desktop_Enterprise_Automation_Framework

./: .gitignore  DesktopAutomationLibrary.libspec  DesktopAutomationLibrary.py  README.md  pyproject.toml  requirements.txt
desktop_automation_platform/: __init__.py
desktop_automation_platform/adapters/: __init__.py  adapter_manager.py  adapter_registry.py  base_adapter.py
desktop_automation_platform/adapters/detector/: __init__.py  application_detector.py  process_inspector.py  technology_classifier.py
desktop_automation_platform/adapters/flaui/: __init__.py  adapter.py  automation_factory.py  control_type_map.py  element_resolver.py  scanner.py  (+1 more)
desktop_automation_platform/config/: __init__.py  framework_config.py  schema.py  yaml_loader.py
desktop_automation_platform/core/: __init__.py  container.py  exceptions.py  models.py
desktop_automation_platform/examples/: sample_config.yaml  sample_locators.yaml
desktop_automation_platform/locator_engine/: __init__.py  locator_model.py
desktop_automation_platform/recovery/: __init__.py  healing_tracker.py  recovery_manager.py  robot_listener.py
desktop_automation_platform/reporting/: __init__.py
desktop_automation_platform/robot_keywords/: __init__.py  library.py
desktop_automation_platform/scanner/: __init__.py  locator_generator.py  yaml_exporter.py
desktop_automation_platform/tests/: __init__.py
desktop_automation_platform/utils/: __init__.py  logger.py  process_utils.py  retry_utils.py
docs/: GETTING_STARTED.md  STYLE_GUIDE.md
examples/claims_demo/: README.md  config.yaml  locators.yaml  run_tests.ps1
examples/claims_reference/: .gitignore  config.yaml
examples/notepad_reference/: .gitignore  config.yaml
my_first_test/: config.yaml  locators.yaml  test_notepad.robot
my_first_test/resources/: business_keywords.resource  platform_settings.resource
scripts/: install.ps1  new_project.py  setup_flaui.ps1
(+43 files in other folders)
