[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-automation-platform"
version = "1.0.0"
description = "Enterprise Desktop Automation Platform for QA Teams"
readme = "README.md"
authors = [{ name = "QA Platform Team" }]
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
dependencies = [
    "robotframework>=7.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "structlog>=24.1.0",
    "dependency-injector>=4.41.0",
    "psutil>=5.9.7",
]

[project.optional-dependencies]
windows = [
    "pywinauto>=0.6.8",
    "comtypes>=1.2.0",
    "pywin32>=306",
]
electron = [
    "playwright>=1.40.0",
]
image = [
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
]
dev = [
    "pytest>=7.4.4",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
all = [
    "desktop-automation-platform[windows,electron,image,dev]",
]

[tool.setuptools]
py-modules = ["DesktopAutomationLibrary"]

[tool.setuptools.packages.find]
where = ["."]
include = ["desktop_automation_platform*"]

[tool.pytest.ini_options]
testpaths = ["desktop_automation_platform/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=desktop_automation_platform",
    "--cov-report=html:reports/coverage",
    "--cov-report=term-missing",
    "-v",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "examples/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
